tests/negative/gold/abstractE_test.gold
tests/negative/abstractE_test.toit:9:7: error: Non-abstract class 'B' is missing implementations
class B extends A:
      ^
tests/negative/abstractE_test.toit:6:12: note: Missing implementation for 'foo'
  abstract foo
           ^~~
Compilation failed.
